--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
         fetch('/api/test', {
           method: 'GET',
-          credentials: 'include',
+          credentials: 'same-origin',
           headers: {
             'Content-Type': 'application/json'
           }
